--- a/.gitignore
+++ b/.gitignore
@@ -212,7 +212,7 @@ venv.bak/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
+.vscode/launch.json
 !.vscode/extensions.json
 .history
 
