Change wildcard to start workflow on workflow yaml file changes

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
     paths:
       - "python_etl/**"
       - "template.yaml"
-      - ".github/workflows/main.yml"
+      - ".github/**"
       - "tests/**"
 jobs:
   build:
