Add trigger for workflow for changes to sns_lambda directory

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - "python_etl/**"
+      - "sns_lambda/**"
       - "template.yaml"
       - ".github/**"
       - "tests/**"
