--- a/template.yaml
+++ b/template.yaml
@@ -34,7 +34,7 @@ Resources:
       Runtime: python3.8
       Policies:
         - SNSPublishMessagePolicy:
-            TopicName: !Ref DBUpdateTopic
+            TopicName: !GetAtt DBUpdateTopic.TopicName
       Environment:
         Variables:
           TOPIC_ARN: !Ref DBUpdateTopic
