Add production back to valid environments for email filter policy

--- a/template.yaml
+++ b/template.yaml
@@ -30,7 +30,8 @@ Resources:
       Protocol: email
       FilterPolicy:
         environment:
-          - development
+          - testing
+          - production
 
   SNSLambdaFunction:
     Type: AWS::Serverless::Function
