Complete sns_lambda tests, change sqs filter policy to testing, add month column to etl result

--- a/template.yaml
+++ b/template.yaml
@@ -46,7 +46,7 @@ Resources:
       Protocol: sqs
       FilterPolicy:
         environment:
-          - production
+          - testing
 
   QueuePolicy:
     Type: AWS::SQS::QueuePolicy
