--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,11 +23,9 @@ jobs:
           python-version: "3.8"
       - name: Run Unit Tests
         run: |
-          pip3 install pytest boto3 moto[s3] moto[sns] pandas
+          pip3 install pytest boto3 moto[s3] pandas
           pytest -v
       - name: Build Project Artifact
         run: sam build --use-container
       - name: Deploy Resources
         run: sam deploy --stack-name python-etl-challenge --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} --s3-bucket ${{ secrets.AWS_S3_SAM_BUCKET }} --no-fail-on-empty-changeset
-      # - name: Smoke Test
-      #   run: python3 tests/smoke_test.py
