Add changes to api lambda to workflow triggers

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,6 +4,7 @@ on:
     paths:
       - "python_etl/**"
       - "sns_lambda/**"
+      - "covid_api/**"
       - "template.yaml"
       - ".github/**"
       - "tests/**"
