Move lambda directories into single directory, modify test_setup.py to account for the new directory structure, modify template.yaml to point to new source code for lambda function resources

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,9 +2,7 @@ name: Python ETL Challenge CI/CD Back-End
 on:
   push:
     paths:
-      - "python_etl/**"
-      - "sns_lambda/**"
-      - "covid_api/**"
+      - "lambdas/**"
       - "template.yaml"
       - ".github/**"
       - "tests/**"
